# Hackathon

./: .gitignore  README.md  build.gradle  buildJar.gradle  buildSdk.gradle  env.sh  gradle.properties  gradletest.gradle  settings.gradle  simplekey.jks
activities/: build.gradle
activities/logcat/: main_handler_remain_message  with_finish_reference  without_finish_reference
activities/src/main/: AndroidManifest.xml
androidlib/: CMakeLists.txt  build.gradle  musicCache.md
androidlib/src/androidTest/java/com/hy/androidlib/: ExampleInstrumentedTest.java
androidlib/src/main/: AndroidManifest.xml
androidlib/src/main/cpp/: memleak.cpp  memleak.h
androidlib/src/main/cpp/include/: config.h  log.h  type.h
androidlib/src/main/java/com/hy/androidlib/: ActivityManager.java  Foreground.java  Logcat.java  PermissionManager.java
androidlib/src/main/java/com/hy/androidlib/base/: BaseActivity.java  BaseFragment.java  BasePresenter.java  BaseView.java  Jl_BaseActivity.java  Jl_BaseFragment.java
androidlib/src/main/java/com/hy/androidlib/bean/http/: HttpParseException.java  HttpRequest.java  HttpResponse.java
androidlib/src/main/java/com/hy/androidlib/media/proxy/: DataHandler.java  DiskCache.java  FileHandler.java  MediaPlayerProxy.java  MediaPlayerProxy2.java  MusicHead.java
androidlib/src/main/java/com/hy/androidlib/network/: NetWorkUtil.java  WifiHelper.java
androidlib/src/main/java/com/hy/androidlib/receivers/: NetworkStateBroadReceiver.java  SmsBroadcastReceiver.java
androidlib/src/main/java/com/hy/androidlib/utils/: BitmapUtil.java  FileUtil.java  LeakCanaryManager.java  PreferencesHelper.java  SystemUtil.java  ToastUtil.java  ValueUtil.java
androidlib/src/main/java/com/hy/androidlib/widget/: ButtonsLayout.java
androidlib/src/main/res/drawable/: button_background.xml  drawable_background.xml  stroke_primary.xml
androidlib/src/main/res/layout/: special_button.xml  text_buttons.xml
androidlib/src/main/res/values/: colors.xml  dimens.xml  styles.xml
androidlib/src/test/java/com/hy/androidlib/: ExampleUnitTest.java
app/: build.gradle
bluetoothdemo/: build.gradle
bluetoothdemo/src/main/: AndroidManifest.xml
client/: build.gradle
client/src/main/: AndroidManifest.xml
client2/: build.gradle  google-services.json
client2/src/main/: AndroidManifest.xml
database/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hackathon1/: build.gradle
hackathon2/: build.gradle
hackathon_cpp/: build.gradle  run.sh
jspider/: .gitignore  build.gradle  log4j.properties  log4j_mac.properties  log4jl.properties
kotlin/: build.gradle
map/: build.gradle
media/: CMakeLists.txt  build.gradle
media/src/androidTest/java/com/hy/media/: ExampleInstrumentedTest.java
media/src/main/: AndroidManifest.xml
media/src/main/assets/lib/armeabi/: libavdevice.so.57  libavfilter.so.6  libavformat.so.57  libavutil.so.55  libswresample.so.2  libswscale.so.4
media/src/main/cpp/: ffmpeg_test.cpp  hy_lib.cpp  hy_lib.h  jni_loader.cpp  jni_play_video.c  jni_play_video.cpp  native_draw.cpp
media/src/main/java/com/hy/media/: FFMpegInfoActivity.java  FileUtil.java  MainActivity.java  MediaApplication.java  NativeDrawActivity.java  PlayVideoActivity.java  WelcomeActivity.java
media/src/main/java/com/hy/media/player/: FFLoader.java  FFPlayer.java  FFTest.java
media/src/main/java/com/hy/media/widget/: SquareFrameLayout.java
media/src/main/res/layout/: activity_ffmpeg_info.xml  activity_main.xml  activity_native_draw.xml  activity_play_video.xml  activity_welcome.xml  item_simple_image_center_text.xml
media/src/test/java/com/hy/media/: ExampleUnitTest.java
multiprocess/: build.gradle
networkcancer/: build.gradle
niukewang/: build.gradle
opengl/: build.gradle
opengl/src/main/jni/: CMakeLists.txt
opengl/src/main/jni/cpp/: blurimageview.cpp
opengl/src/main/jni/cpp/blursimple/: blurimageview.cpp
parser/: abc.txt  build.gradle  proguard-rules.pro  proguard.bat
security/: article.txt
utils/: .gitignore  build.gradle
(+346 files in other folders)
